<resources>
    <string name="app_name">I See You</string>

    <!--Strings for the Navigation bar drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_inventory">My inventory</string>
    <string name="nav_pillbox">Pillbox</string>
    <string name="nav_heartrate">Heart Rate Monitor</string>
    <string name="nav_notifications">My Notifications</string>
    <string name="nav_appointments">Appointments</string>
    <string name="nav_myprofile">My Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>My Inventory</item>
        <item>PillBox</item>
        <item>Heart Rate Monitor</item>
        <item>Appointments</item>
        <item>Notifications</item>
        <item>Profile</item>
        <item>Switch Profile</item>
        <item>Logout</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit">Edit</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="switch_patient">Switch Patient</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
